--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inctagram",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Evgenii Konstantinov <102171281+Trychangelife@users.noreply.github.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -65,5 +65,7 @@
     ],
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
-  }
+  },
+  "main": "index.js",
+  "repository": "https://github.com/Smart-team-It-incubator/inctagram"
 }
