change author project

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "inctagram",
   "version": "0.0.1",
   "description": "",
-  "author": "Evgenii Konstantinov <102171281+Trychangelife@users.noreply.github.com>",
+  "author": "Smart-team",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
