add Prisma, Cloud connect, Different databases

--- a/apps/core_app/deployment.yaml
+++ b/apps/core_app/deployment.yaml
@@ -21,3 +21,9 @@ spec:
            ports:
              - containerPort: PORT_CONTAINER
 
+           env:
+             - name: DATABASE_URL_DEV
+               valueFrom:
+                 secretKeyRef:
+                   name: smart-team-backend-coreapp-production-config-secret
+                   key: DATABASE_URL_DEV
