--- a/apps/core_app/deployment.yaml
+++ b/apps/core_app/deployment.yaml
@@ -22,6 +22,16 @@ spec:
              - containerPort: PORT_CONTAINER
 
            env:
+             - name: DATEBASE_URL
+               valueFrom:
+                 secretKeyRef:
+                   name: smart-team-backend-coreapp-production-config-secret
+                   key: DATEBASE_URL
+             - name: NODE_ENV
+               valueFrom:
+                 secretKeyRef:
+                   name: smart-team-backend-coreapp-production-config-secret
+                   key: NODE_ENV
              - name: DATABASE_URL_DEV
                valueFrom:
                  secretKeyRef:
