--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "cross-env NODE_ENV=TEST jest --runInBand",
-    "build:utility_app": "nest build utility_app",
-    "start:utility_app": "node dist/apps/utility_app/main",
-    "start:dev:utility_app": "nest start utility_app --watch",
+    "build:files": "nest build files",
+    "start:files": "cross-env NODE_ENV=production node dist/apps/files/main",
+    "start:dev:files": "cross-env NODE_ENV=development nest start files --watch",
     "build:core_app": "nest build core_app",
     "start:core_app": "cross-env NODE_ENV=production node dist/apps/core_app/main",
     "start:dev:core_app": "cross-env NODE_ENV=development nest start core_app --watch"
@@ -30,6 +30,7 @@
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.8",
+    "@nestjs/microservices": "^10.4.15",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^6.0.1",
     "cross-env": "^7.0.3",
