--- a/apps/files/deployment.yaml
+++ b/apps/files/deployment.yaml
@@ -21,3 +21,14 @@ spec:
            ports:
              - containerPort: PORT_CONTAINER
 
+           env:
+             - name: FILES_SERVICE_PORT
+               valueFrom:
+                 secretKeyRef:
+                   name: smart-team-backend-files-production-config-secret
+                   key: FILES_SERVICE_PORT
+             - name: FILES_SERVICE_HOST
+               valueFrom:
+                 secretKeyRef:
+                   name: smart-team-backend-files-production-config-secret
+                   key: FILES_SERVICE_HOST
