--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "start:dev:files": "cross-env NODE_ENV=development nest start files --watch",
     "build:core_app": "nest build core_app",
     "start:core_app": "cross-env NODE_ENV=production node dist/apps/core_app/main",
-    "start:dev:core_app": "cross-env NODE_ENV=development nest start core_app --watch"
+    "start:dev:core_app": "cross-env NODE_ENV=development nest start core_app --watch",
+    "migrate:dev": "dotenv -e .development.env -- npx prisma migrate dev",
+    "migrate:prod": "dotenv -e .production.env -- npx prisma migrate deploy"
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
