--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "migrate:prod": "dotenv -e .production.env -- npx prisma migrate deploy"
   },
   "dependencies": {
-    "@nestjs/class-validator": "^0.13.4",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
@@ -37,6 +36,8 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.0.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
     "reflect-metadata": "^0.2.0",
