--- a/package.json
+++ b/package.json
@@ -37,19 +37,25 @@
     "generate:auth": "npx prisma generate --schema=apps/auth/prisma/schema.prisma"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.1.3",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.8",
+    "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.15",
+    "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^8.1.0",
     "@prisma/client": "^6.0.1",
     "axios": "^1.7.9",
+    "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.7",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1"
