REFACTIORING for diff prisma client DB

--- a/package.json
+++ b/package.json
@@ -5,42 +5,47 @@
   "author": "Smart-team",
   "private": true,
   "license": "UNLICENSED",
-  "scripts": {
-    "build": "nest build",
-    "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "cross-env NODE_ENV=production node dist/apps/core_app/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest --passWithNoTests",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "cross-env NODE_ENV=TEST jest --runInBand --passWithNoTests",
-    "build:files": "nest build files",
-    "start:files": "cross-env NODE_ENV=production node dist/apps/files/main",
-    "start:dev:files": "cross-env NODE_ENV=development nest start files --watch",
-    "build:core_app": "nest build core_app",
-    "start:core_app": "cross-env NODE_ENV=production node dist/apps/core_app/main",
-    "start:dev:core_app": "cross-env NODE_ENV=development nest start core_app --watch",
-    "build:auth": "nest build auth",
-    "start:auth": "cross-env NODE_ENV=production node dist/apps/auth/main",
-    "start:dev:auth": "cross-env NODE_ENV=development nest start auth --watch",
-    "migrate:dev": "dotenv -e .development.env -- npx prisma migrate dev",
-    "migrate:prod": "dotenv -e .production.env -- npx prisma migrate deploy",
-    "migrate:statusdev": "dotenv -e .development.env -- npx prisma migrate status",
-    "migrate:statusprod": "dotenv -e .production.env -- npx prisma migrate status",
-    "migrate:hotfix": "dotenv -e .production.env -- npx prisma migrate resolve --applied",
-    "migrate:auth:dev": "cross-env NODE_ENV=development npx prisma migrate dev --schema=apps/auth/prisma/schema.prisma",
-    "migrate:auth:def": "dotenv -e .development.env npx prisma migrate dev --schema=apps/auth/prisma/schema.prisma",
-    "migrate:auth:prod": "cross-env NODE_ENV=production npx prisma migrate deploy --schema=apps/auth/prisma/schema.prisma",
-    "generate:auth": "npx prisma generate --schema=apps/auth/prisma/schema.prisma"
-  },
+"scripts": {
+  "build": "nest build",
+  "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+  "start": "nest start",
+  "start:dev": "nest start --watch",
+  "start:debug": "nest start --debug --watch",
+  "start:prod": "cross-env NODE_ENV=production node dist/apps/core_app/main",
+  "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+  "test": "jest --passWithNoTests",
+  "test:watch": "jest --watch",
+  "test:cov": "jest --coverage",
+  "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+  "test:e2e": "cross-env NODE_ENV=TEST jest --runInBand --passWithNoTests",
+  "build:files": "nest build files",
+  "start:files": "cross-env ENV_FILE=./apps/files/.production.env node dist/apps/files/main",
+  "start:dev:files": "cross-env ENV_FILE=./apps/files/.development.env nest start files --watch",
+  "build:core_app": "nest build core_app",
+  "start:core_app": "cross-env ENV_FILE=./apps/core_app/.production.env node dist/apps/core_app/main",
+  "start:dev:core_app": "cross-env ENV_FILE=./apps/core_app/.development.env nest start core_app --watch",
+  "build:auth": "nest build auth",
+  "start:auth": "cross-env ENV_FILE=./apps/auth/.production.env node dist/apps/auth/main",
+  "start:dev:auth": "cross-env ENV_FILE=./apps/auth/.development.env nest start auth --watch",
+  "migrate:core-app:dev": "cross-env ENV_FILE=./apps/core_app/.development.env npx prisma migrate dev --schema=apps/core_app/prisma/schema.prisma",
+  "migrate:core-app:prod": "cross-env ENV_FILE=./apps/core_app/.production.env npx prisma migrate deploy --schema=apps/core_app/prisma/schema.prisma",
+  "migrate:statusdev": "cross-env ENV_FILE=.development.env npx prisma migrate status",
+  "migrate:statusprod": "cross-env ENV_FILE=.production.env npx prisma migrate status",
+  "migrate:hotfix": "cross-env ENV_FILE=.production.env npx prisma migrate resolve --applied",
+  "migrate:auth:dev": "cross-env ENV_FILE=./apps/auth/.development.env npx prisma migrate dev --schema=apps/auth/prisma/schema.prisma",
+  "migrate:auth:prod": "cross-env ENV_FILE=./apps/auth/.production.env npx prisma migrate deploy --schema=apps/auth/prisma/schema.prisma",
+  "generate:auth": "cross-env ENV_FILE=./apps/auth/.development.env npx prisma generate --schema=apps/auth/prisma/schema.prisma",
+  "generate:core-app": "cross-env ENV_FILE=./apps/core_app/.development.env npx prisma generate --schema=apps/core_app/prisma/schema.prisma",
+  "libs:builds": "nest build shared-dto && nest build auth-api && nest build core-app-api"
+},
+  "prisma": {
+  "schema": "apps/auth/prisma/schema.prisma",
+  "schema2": "apps/core_app/prisma/schema.prisma"
+},
   "dependencies": {
     "@libs/shared-dto": "file:./libs/shared-dto",
     "@nestjs/axios": "^3.1.3",
-    "@nestjs/common": "^10.0.0",
+    "@nestjs/common": "^10.4.15",
     "@nestjs/config": "^3.3.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.8",
