Implementing MultideviceFlow + Debug in dev command

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:debug": "nest start auth --debug --watch",
     "start:prod": "cross-env NODE_ENV=production node dist/apps/core_app/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest --passWithNoTests",
@@ -23,10 +23,10 @@
     "start:dev:files": "cross-env ENV_FILE=./apps/files/.development.env nest start files --watch",
     "build:core_app": "nest build core_app",
     "start:core_app": "cross-env ENV_FILE=./apps/core_app/.production.env node dist/apps/core_app/main",
-    "start:dev:core_app": "cross-env ENV_FILE=./apps/core_app/.development.env nest start core_app --watch",
+    "start:dev:core_app": "cross-env ENV_FILE=./apps/core_app/.development.env nest start core_app --watch --debug=9009",
     "build:auth": "nest build auth",
     "start:auth": "cross-env ENV_FILE=./apps/auth/.production.env node dist/apps/auth/main",
-    "start:dev:auth": "cross-env ENV_FILE=./apps/auth/.development.env nest start auth --watch",
+    "start:dev:auth": "cross-env ENV_FILE=./apps/auth/.development.env nest start auth --watch --debug",
     "migrate:core-app:dev": "dotenv -e ./apps/core_app/.development.env -- npx prisma migrate dev --schema=./apps/core_app/prisma/schema.prisma",
     "migrate:core-app:prod": "dotenv -e ./apps/core_app/.production.env -- npx prisma migrate deploy --schema=./apps/core_app/prisma/schema.prisma",
     "migrate:statusdev": "cross-env ENV_FILE=.development.env npx prisma migrate status",
