--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,8 +11,11 @@
     "outDir": "./dist",
     "baseUrl": "./",
     "incremental": true,
+    "allowJs": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
